And while I'm at it remove this JVM 1.4 crap
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@14288 219f1c6e-4a0e-43c8-96f2-6e749be13fd4